# mnemonic-gen

./: .editorconfig  .env.example  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  Gemma2_9b_Unsloth.ipynb  README.md  environment.yaml  pyproject.toml  requirements.txt  ruff.toml  setup.sh
.github/workflows/: ci.yaml  lint.yaml
assets/: abstract.drawio
config/: classify_mnemonics.yaml  claude_conf.json  default_conf.json  hf_conf.json  openai_cc_improve.json  openai_conf.json  openai_sftcc_conf.json
config/api/: claude.json  deepseek_reasoner.json  default_backend.json  default_generation.json  openai.json
config/train/: grpo.yaml
data_prep/: README.txt  data_processing.py  improve_mnemonics.py  mnemonic_processing.py  test_data_processing.py
data_prep/config/: improve_ft.yaml  improve_sft.json
data_prep/prompts/: README.txt  improve_sft_system.txt
data_prep/raw/: README.md  README.txt  improved_data.csv  improved_mnemonics.csv  manual_cards.txt  test.txt
notebooks/: gemma-3-grpo.ipynb  gemma3-4B.ipynb  gemma3-4b-colab.ipynb  gemma3-4b-kaggle.ipynb  gemma3-4b.ipynb  gemma3-grpo.ipynb  sft.ipynb  visualizer.ipynb
prompts/: README.txt  categorize_mnemonics.yaml  classify_mnemonics.yaml  icl0_system_mnemonic.txt  improve_ft_system.txt  user_basic.txt
prompts/classify/: classify_system.txt
prompts/finetune/: system.txt  user.txt
prompts/improve/: improve_gen_system.txt
prompts/reason/: system.txt  system_100_shot.txt  system_10_shot.txt  system_184_shot.txt  system_plan.txt  user.txt
prompts/train/: system.txt
scripts/: _finetune_openai.py  _finetune_openai_pipeline.py  _improve_mnemonics.py  _upload_hf_dataset.py  generate_mnemonics.py  improve_mnemonics.py  run_eval.py  setup-dev.sh  train.py
src/: __init__.py  constants.py  settings.py
src/_data_prep/: data_converters.py  data_exporters.py  data_io.py  data_processors.py  data_readers.py  data_samplers.py  data_test_processors.py  init_db.py  mnemonic_enhancer.py  mnemonic_schemas.py
src/_mnemonic_enhancer/: init_db.py  mnemonic_enhancer.py  mnemonic_ft.py  mnemonic_schemas.py
src/app/: README.md  app.py  app2.py
src/data/: __init__.py  data_hf.py  data_loader.py  data_loaders.py  data_processing.py  data_validators.py  mnemonic_models.py  mnemonic_processing.py
src/data_gen/: __init__.py  analyze.py  generate.py  init_db.py  judge.py  mnemonic_models.py  models.py  processor.py  prompt.py  prompt_makers.py  reasoner.py
src/data_pipeline/: data_processing.py  instruct_datasets.py  mnemonic_processing.py
src/data_prep/: README.txt  __init__.py  data_converters.py  data_export.py  data_hf.py  data_io.py  data_processing.py  data_processors.py  data_readers.py  data_samplers.py  data_test_processing.py  data_test_processors.py  data_validators.py  dedup.py  init_db.py  json_schemas.py  mnemonic_enhancer.py  mnemonic_ft.py  mnemonic_schemas.py
src/eval/: diversity.py  irr.py  judge_llm.py  mnemonic_classifiers.py  plot_llm.py  relevance.py  significance.py
src/huggingface/: __init__.py  hf_utils.py  sft.py
src/llms/: __init__.py  client.py
src/llms/huggingface/: hf_client.py  hf_utils.py
src/llms/openai/: __init__.py  openai_cc.py  openai_ft.py  openai_utils.py
src/openai/: __init__.py  openai_cc.py  openai_ft.py  openai_utils.py
src/process_data/: process_data.py
src/reason/: init_db.py  mnemonic_models.py
src/sft/: __init__.py
src/tools/: __init__.py
src/train/: client.py  reward_functions.py
src/train/openai/: mnemonic_enhancer.py  mnemonic_ft.py  mnemonic_schemas.py  openai_ft.py  openai_utils.py
src/utils/: __init__.py  aliases.py  common.py  constants.py  error_handlers.py  error_handling.py  hf_utils.py  ssl_utils.py  types.py
tests/: conftest.py  test_api_connection.py  test_client.py  test_validators.py
writeup/: Untitled Diagram.drawio  abstract.drawio  acl.tex  acl_latex.tex  custom.bib  plan.md  try.tex
writeup/appendix/: 91_prompts.tex  93_preliminaries.tex  94_config.tex  99_minerva.tex  annotation.tex  config.tex  iterations.tex  mnemonics.tex  preliminaries.tex  prompts.tex  reflection.tex  transparency.tex
writeup/draft/: acl.sty  acl_natbib.bst  capstone.tex  neurips_2024.tex
writeup/figures/: good_bad_mnemonics.tex  significance.tex
writeup/minerva/: hclo.tex  reflection.tex
writeup/pages/: 00_title.tex  01_abstract.tex  10_intro.tex  20_background.tex  30_icl.tex  40_distillation.tex  50_eval.tex  60_discussion.tex  60_related.tex  70_discussion.tex  90_appendix.tex  93_preliminaries.tex  94_config.tex  95_transparency.tex  99_minerva.tex
writeup/preamble/: common.tex
